--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14.x
-      - name: npm install
-        run: npm i
-      - name: build docs
-        run: npm run docs:build
+      - name: run deploy.sh
+        run: bash deploy.sh
