--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
           git commit -m "deploy"
 
       - name: Push changes to gh-page
-        uses: ad-m/github-push-action@gh-page
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GH_TOKEN }}
+          branch: gh-pagh
