--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
           git config --global user.email 604191904@qq.com
           git config --global user.name xyfei-rebot
           cd docs/.vuepress/dist
+          git init
           git add .
           git commit -m "deploy"
 
@@ -32,3 +33,4 @@ jobs:
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           branch: gh-pagh
+          directory: ./docs/.vuepress/dist
